name:           reflex-dom-forms
version:        0.0.1
synopsis:       Form validation and abstraction for Reflex-DOM applications
category:       Web
maintainer:     Elliot Cameron <eacameron@gmail.com>
copyright:      2018 Elliot Cameron
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:
    Form.Checks
    Reflex.Dom.Form.FieldWriter
    Reflex.Dom.Form.Validators
    Reflex.Dom.Form.Widgets
    Reflex.Dom.TextField
  hs-source-dirs: .
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wno-unused-do-bind
    -O2
  build-depends:
      base
    , containers
    , data-default
    , email-validate
    , lens
    , reflex
    , reflex-dom-core
    , text
    , time
  default-language: Haskell2010
